--- a/plugins/launcher/launcher-dialog.glade
+++ b/plugins/launcher/launcher-dialog.glade
@@ -1,14 +1,15 @@
 <?xml version="1.0"?>
 <interface>
   <!--interface-requires gtk+ 2.12-->
-  <object class="GtkDialog" id="xfce-launcher-dialog">
-    <property name="title" translatable="yes">Launcher Preferences</property>
-    <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
-    <property name="icon_name">gtk-preferences</property>
-    <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
+  <!--interface-requires xfce4 0.0-->
+  <object class="XfceTitledDialog" id="dialog">
+    <property name="title" translatable="yes">Launcher Properties</property>
+    <property name="window_position">GTK_WIN_POS_CENTER</property>
+    <property name="icon_name">gtk-properties</property>
+    <property name="type_hint">GDK_WINDOW_TYPE_HINT_NORMAL</property>
     <property name="has_separator">False</property>
     <child internal-child="vbox">
-      <object class="GtkVBox" id="dialog-vbox1">
+      <object class="GtkVBox" id="dialog-vbox2">
         <property name="visible">True</property>
         <property name="spacing">2</property>
         <child>
@@ -33,11 +34,10 @@
                         <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
                         <property name="shadow_type">GTK_SHADOW_IN</property>
                         <child>
-                          <object class="GtkTreeView" id="launchers-treeview">
+                          <object class="GtkTreeView" id="entry-treeview">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="headers_visible">False</property>
-                            <property name="headers_clickable">False</property>
                           </object>
                         </child>
                       </object>
@@ -50,7 +50,7 @@
                         <property name="visible">True</property>
                         <property name="spacing">6</property>
                         <child>
-                          <object class="GtkButton" id="launchers-up">
+                          <object class="GtkButton" id="entry-up">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
@@ -67,7 +67,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkButton" id="launchers-down">
+                          <object class="GtkButton" id="entry-down">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
@@ -92,7 +92,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkButton" id="launchers-add">
+                          <object class="GtkButton" id="entry-add">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
@@ -109,7 +109,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkButton" id="launchers-remove">
+                          <object class="GtkButton" id="entry-remove">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
@@ -155,7 +155,7 @@
                             <property name="xalign">0</property>
                             <property name="label" translatable="yes">_Name:</property>
                             <property name="use_underline">True</property>
-                            <property name="mnemonic_widget">launcher-name</property>
+                            <property name="mnemonic_widget">entry-name</property>
                           </object>
                           <packing>
                             <property name="x_options">GTK_FILL</property>
@@ -168,7 +168,7 @@
                             <property name="xalign">0</property>
                             <property name="label" translatable="yes">_Description:</property>
                             <property name="use_underline">True</property>
-                            <property name="mnemonic_widget">launcher-description</property>
+                            <property name="mnemonic_widget">entry-description</property>
                           </object>
                           <packing>
                             <property name="top_attach">1</property>
@@ -183,7 +183,7 @@
                             <property name="xalign">0</property>
                             <property name="label" translatable="yes">_Icon:</property>
                             <property name="use_underline">True</property>
-                            <property name="mnemonic_widget">launcher-icon</property>
+                            <property name="mnemonic_widget">entry-icon</property>
                           </object>
                           <packing>
                             <property name="top_attach">2</property>
@@ -198,7 +198,7 @@
                             <property name="xalign">0</property>
                             <property name="label" translatable="yes">Co_mmand:</property>
                             <property name="use_underline">True</property>
-                            <property name="mnemonic_widget">launcher-command</property>
+                            <property name="mnemonic_widget">entry-command</property>
                           </object>
                           <packing>
                             <property name="top_attach">3</property>
@@ -213,7 +213,7 @@
                             <property name="xalign">0</property>
                             <property name="label" translatable="yes">_Working Directory:</property>
                             <property name="use_underline">True</property>
-                            <property name="mnemonic_widget">launcher-working-directory</property>
+                            <property name="mnemonic_widget">entry-working-directory</property>
                           </object>
                           <packing>
                             <property name="top_attach">4</property>
@@ -234,7 +234,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkEntry" id="launcher-name">
+                          <object class="GtkEntry" id="entry-name">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                           </object>
@@ -245,7 +245,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkEntry" id="launcher-description">
+                          <object class="GtkEntry" id="entry-description">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                           </object>
@@ -258,7 +258,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkEntry" id="launcher-command">
+                          <object class="GtkEntry" id="entry-command">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                           </object>
@@ -271,7 +271,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkButton" id="launcher-command-select">
+                          <object class="GtkButton" id="entry-command-select">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
@@ -293,7 +293,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkFileChooserButton" id="launcher-working-directory">
+                          <object class="GtkFileChooserButton" id="entry-working-directory">
                             <property name="visible">True</property>
                             <property name="action">GTK_FILE_CHOOSER_ACTION_SELECT_FOLDER</property>
                             <property name="title" translatable="yes">Select A Working Directory</property>
@@ -307,7 +307,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkCheckButton" id="launcher-in-terminal">
+                          <object class="GtkCheckButton" id="entry-run-in-terminal">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="label" translatable="yes">Run in _terminal</property>
@@ -323,7 +323,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkCheckButton" id="launcher-startup-notify">
+                          <object class="GtkCheckButton" id="entry-startup-notify">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="label" translatable="yes">Use _statup notification</property>
@@ -344,7 +344,7 @@
                             <property name="xalign">0</property>
                             <property name="xscale">0</property>
                             <child>
-                              <object class="GtkButton" id="launcher-icon">
+                              <object class="GtkButton" id="entry-icon">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
@@ -391,7 +391,7 @@
                 <property name="border_width">6</property>
                 <property name="spacing">6</property>
                 <child>
-                  <object class="GtkCheckButton" id="advanced-disable-tooltips">
+                  <object class="GtkCheckButton" id="adv-disable-tooltips">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="label" translatable="yes">Disable t_ooltips</property>
@@ -404,7 +404,7 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkCheckButton" id="advanced-show-labels">
+                  <object class="GtkCheckButton" id="adv-show-labels">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="label" translatable="yes">Show _labels instead of icons</property>
@@ -417,10 +417,11 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkCheckButton" id="advanced-show-last-used">
+                  <object class="GtkCheckButton" id="adv-show-last-used">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="label" translatable="yes">Show last used entry in panel</property>
+                    <property name="label" translatable="yes">Show last _used entry in panel</property>
+                    <property name="use_underline">True</property>
                     <property name="draw_indicator">True</property>
                   </object>
                   <packing>
@@ -437,7 +438,7 @@
                         <property name="visible">True</property>
                         <property name="label" translatable="yes">_Arrow button position:</property>
                         <property name="use_underline">True</property>
-                        <property name="mnemonic_widget">advanced-arrow-position</property>
+                        <property name="mnemonic_widget">adv-arrow-position</property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
@@ -445,7 +446,7 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkComboBox" id="advanced-arrow-position">
+                      <object class="GtkComboBox" id="adv-arrow-position">
                         <property name="visible">True</property>
                         <property name="button_sensitivity">GTK_SENSITIVITY_ON</property>
                       </object>
@@ -481,11 +482,11 @@
           </packing>
         </child>
         <child internal-child="action_area">
-          <object class="GtkHButtonBox" id="dialog-action_area1">
+          <object class="GtkHButtonBox" id="dialog-action_area2">
             <property name="visible">True</property>
             <property name="layout_style">GTK_BUTTONBOX_END</property>
             <child>
-              <object class="GtkButton" id="button1">
+              <object class="GtkButton" id="close-button">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
