--- a/plugins/launcher/launcher-dialog.glade
+++ b/plugins/launcher/launcher-dialog.glade
@@ -1,7 +1,8 @@
 <?xml version="1.0"?>
 <interface>
-  <!--interface-requires gtk+ 2.12-->
-  <!--interface-requires xfce4 0.0-->
+  <requires lib="gtk+" version="2.14"/>
+  <!-- interface-requires xfce4 0.0 -->
+  <!-- interface-naming-policy toplevel-contextual -->
   <object class="XfceTitledDialog" id="dialog">
     <property name="title" translatable="yes">Launcher Properties</property>
     <property name="window_position">GTK_WIN_POS_CENTER</property>
@@ -283,7 +284,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkButton" id="entry-command-select">
+                          <object class="GtkButton" id="command-select">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
@@ -319,7 +320,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkCheckButton" id="entry-run-in-terminal">
+                          <object class="GtkCheckButton" id="entry-terminal">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="label" translatable="yes">Run in _terminal</property>
@@ -403,7 +404,7 @@
                 <property name="border_width">6</property>
                 <property name="spacing">6</property>
                 <child>
-                  <object class="GtkCheckButton" id="adv-disable-tooltips">
+                  <object class="GtkCheckButton" id="disable-tooltips">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="label" translatable="yes">Disable t_ooltips</property>
@@ -416,7 +417,7 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkCheckButton" id="adv-show-labels">
+                  <object class="GtkCheckButton" id="show-labels">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="label" translatable="yes">Show _labels instead of icons</property>
@@ -429,7 +430,7 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkCheckButton" id="adv-show-last-used">
+                  <object class="GtkCheckButton" id="move-first">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="label" translatable="yes">Show last _used entry in panel</property>
@@ -450,7 +451,7 @@
                         <property name="visible">True</property>
                         <property name="label" translatable="yes">_Arrow button position:</property>
                         <property name="use_underline">True</property>
-                        <property name="mnemonic_widget">adv-arrow-position</property>
+                        <property name="mnemonic_widget">arrow-position</property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
@@ -458,8 +459,9 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkComboBox" id="adv-arrow-position">
+                      <object class="GtkComboBox" id="arrow-position">
                         <property name="visible">True</property>
+                        <property name="model">arrow-position-store</property>
                         <property name="button_sensitivity">GTK_SENSITIVITY_ON</property>
                       </object>
                       <packing>
@@ -520,19 +522,30 @@
       </object>
     </child>
   </object>
-  <object class="GtkMenu" id="add-menu">
-    <property name="visible">True</property>
-    <child>
-      <object class="GtkMenuItem" id="add-normal">
-        <property name="visible">True</property>
-        <property name="label" translatable="yes">Normal Entry</property>
-      </object>
-    </child>
-    <child>
-      <object class="GtkMenuItem" id="add-advanced">
-        <property name="visible">True</property>
-        <property name="label" translatable="yes">Advanced Entry</property>
-      </object>
-    </child>
+  <object class="GtkListStore" id="arrow-position-store">
+    <columns>
+      <!-- column-name title -->
+      <column type="gchararray"/>
+    </columns>
+    <data>
+      <row>
+        <col id="0" translatable="yes">Default</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">Left</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">Right</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">Top</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">Bottom</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">Inside Button</col>
+      </row>
+    </data>
   </object>
 </interface>
