Fix small typo in tasklist glade file.

--- a/plugins/tasklist/tasklist-dialog.glade
+++ b/plugins/tasklist/tasklist-dialog.glade
@@ -18,7 +18,7 @@
     </data>
   </object>
   <object class="XfceTitledDialog" id="dialog">
-    <property name="title" translatable="yes">Tasklist Properties</property>
+    <property name="title" translatable="yes">Task List Properties</property>
     <property name="icon_name">gtk-properties</property>
     <property name="type_hint">normal</property>
     <property name="has_separator">False</property>
