--- a/panel/panel-preferences-dialog.glade
+++ b/panel/panel-preferences-dialog.glade
@@ -5,9 +5,9 @@
   <!-- interface-naming-policy toplevel-contextual -->
   <object class="XfceTitledDialog" id="dialog">
     <property name="title" translatable="yes">Xfce Panel Preferences</property>
-    <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
+    <property name="window_position">center-on-parent</property>
     <property name="icon_name">gtk-preferences</property>
-    <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
+    <property name="type_hint">dialog</property>
     <property name="has_separator">False</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox1">
@@ -84,7 +84,7 @@
                       <object class="GtkFrame" id="frame5">
                         <property name="visible">True</property>
                         <property name="label_xalign">0</property>
-                        <property name="shadow_type">GTK_SHADOW_NONE</property>
+                        <property name="shadow_type">none</property>
                         <child>
                           <object class="GtkAlignment" id="alignment5">
                             <property name="visible">True</property>
@@ -104,7 +104,7 @@
                                         <property name="visible">True</property>
                                         <property name="label" translatable="yes">_Orientation:</property>
                                         <property name="use_underline">True</property>
-                                        <property name="wrap_mode">PANGO_WRAP_WORD_CHAR</property>
+                                        <property name="wrap_mode">word-char</property>
                                         <property name="mnemonic_widget">horizontal</property>
                                       </object>
                                       <packing>
@@ -131,9 +131,10 @@
                                   <object class="GtkCheckButton" id="locked">
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
-                                    <property name="label" translatable="yes">_Lock panel</property>
+                                    <property name="receives_default">False</property>
                                     <property name="use_underline">True</property>
                                     <property name="draw_indicator">True</property>
+                                    <property name="label" translatable="yes">_Lock panel</property>
                                   </object>
                                   <packing>
                                     <property name="position">1</property>
@@ -143,9 +144,10 @@
                                   <object class="GtkCheckButton" id="autohide">
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
-                                    <property name="label" translatable="yes">Automatically show and hi_de the panel</property>
+                                    <property name="receives_default">False</property>
                                     <property name="use_underline">True</property>
                                     <property name="draw_indicator">True</property>
+                                    <property name="label" translatable="yes">Automatically show and hi_de the panel</property>
                                   </object>
                                   <packing>
                                     <property name="position">2</property>
@@ -172,7 +174,7 @@
                       <object class="GtkFrame" id="frame6">
                         <property name="visible">True</property>
                         <property name="label_xalign">0</property>
-                        <property name="shadow_type">GTK_SHADOW_NONE</property>
+                        <property name="shadow_type">none</property>
                         <child>
                           <object class="GtkAlignment" id="alignment6">
                             <property name="visible">True</property>
@@ -215,10 +217,10 @@
                                   <object class="GtkHScale" id="length-scale">
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
-                                    <property name="update_policy">GTK_UPDATE_DISCONTINUOUS</property>
+                                    <property name="update_policy">discontinuous</property>
                                     <property name="adjustment">length</property>
                                     <property name="digits">0</property>
-                                    <property name="value_pos">GTK_POS_RIGHT</property>
+                                    <property name="value_pos">right</property>
                                   </object>
                                   <packing>
                                     <property name="left_attach">1</property>
@@ -231,10 +233,10 @@
                                   <object class="GtkHScale" id="size-scale">
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
-                                    <property name="update_policy">GTK_UPDATE_DISCONTINUOUS</property>
+                                    <property name="update_policy">discontinuous</property>
                                     <property name="adjustment">size</property>
                                     <property name="digits">0</property>
-                                    <property name="value_pos">GTK_POS_RIGHT</property>
+                                    <property name="value_pos">right</property>
                                   </object>
                                   <packing>
                                     <property name="left_attach">1</property>
@@ -279,7 +281,7 @@
                       <object class="GtkFrame" id="frame7">
                         <property name="visible">True</property>
                         <property name="label_xalign">0</property>
-                        <property name="shadow_type">GTK_SHADOW_NONE</property>
+                        <property name="shadow_type">none</property>
                         <child>
                           <object class="GtkAlignment" id="alignment7">
                             <property name="visible">True</property>
@@ -308,7 +310,7 @@
                                     <property name="can_focus">True</property>
                                     <property name="adjustment">background-alpha</property>
                                     <property name="digits">0</property>
-                                    <property name="value_pos">GTK_POS_RIGHT</property>
+                                    <property name="value_pos">right</property>
                                   </object>
                                   <packing>
                                     <property name="position">1</property>
@@ -335,7 +337,7 @@
                       <object class="GtkFrame" id="frame8">
                         <property name="visible">True</property>
                         <property name="label_xalign">0</property>
-                        <property name="shadow_type">GTK_SHADOW_NONE</property>
+                        <property name="shadow_type">none</property>
                         <child>
                           <object class="GtkAlignment" id="alignment8">
                             <property name="visible">True</property>
@@ -381,7 +383,7 @@
                                     <property name="can_focus">True</property>
                                     <property name="adjustment">enter-opacity</property>
                                     <property name="digits">0</property>
-                                    <property name="value_pos">GTK_POS_RIGHT</property>
+                                    <property name="value_pos">right</property>
                                   </object>
                                   <packing>
                                     <property name="left_attach">1</property>
@@ -394,7 +396,7 @@
                                     <property name="can_focus">True</property>
                                     <property name="adjustment">leave-opacity</property>
                                     <property name="digits">0</property>
-                                    <property name="value_pos">GTK_POS_RIGHT</property>
+                                    <property name="value_pos">right</property>
                                   </object>
                                   <packing>
                                     <property name="left_attach">1</property>
@@ -468,14 +470,15 @@
         <child internal-child="action_area">
           <object class="GtkHButtonBox" id="dialog-action_area1">
             <property name="visible">True</property>
-            <property name="layout_style">GTK_BUTTONBOX_END</property>
+            <property name="layout_style">end</property>
             <child>
               <object class="GtkButton" id="close-button">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="label" translatable="yes">gtk-close</property>
                 <property name="use_stock">True</property>
+                <property name="response_id">0</property>
+                <property name="label" translatable="yes">gtk-close</property>
               </object>
               <packing>
                 <property name="position">0</property>
@@ -486,8 +489,9 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="label" translatable="yes">gtk-help</property>
                 <property name="use_stock">True</property>
+                <property name="response_id">0</property>
+                <property name="label" translatable="yes">gtk-help</property>
               </object>
               <packing>
                 <property name="position">1</property>
@@ -497,7 +501,7 @@
           </object>
           <packing>
             <property name="expand">False</property>
-            <property name="pack_type">GTK_PACK_END</property>
+            <property name="pack_type">end</property>
             <property name="position">0</property>
           </packing>
         </child>
