--- a/plugins/clock/clock-dialog.glade
+++ b/plugins/clock/clock-dialog.glade
@@ -1,14 +1,15 @@
 <?xml version="1.0"?>
 <interface>
-  <!--interface-requires gtk+ 2.12-->
-  <object class="GtkDialog" id="xfce-clock-dialog">
-    <property name="title" translatable="yes">Clock Preferences</property>
-    <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
-    <property name="icon_name">gtk-preferences</property>
-    <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
+  <!-- interface-requires gtk+ 2.12 -->
+  <!-- interface-requires xfce4 0.0 -->
+  <!-- interface-naming-policy toplevel-contextual -->
+  <object class="XfceTitledDialog" id="dialog">
+    <property name="title" translatable="yes">Clock Properties</property>
+    <property name="icon_name">gtk-properties</property>
+    <property name="type_hint">normal</property>
     <property name="has_separator">False</property>
     <child internal-child="vbox">
-      <object class="GtkVBox" id="dialog-vbox1">
+      <object class="GtkVBox" id="dialog-vbox2">
         <property name="visible">True</property>
         <property name="spacing">2</property>
         <child>
@@ -20,7 +21,7 @@
               <object class="GtkFrame" id="frame3">
                 <property name="visible">True</property>
                 <property name="label_xalign">0</property>
-                <property name="shadow_type">GTK_SHADOW_NONE</property>
+                <property name="shadow_type">none</property>
                 <child>
                   <object class="GtkAlignment" id="alignment3">
                     <property name="visible">True</property>
@@ -84,10 +85,10 @@
                           <object class="GtkCheckButton" id="checkbutton1">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
-                            <property name="label" translatable="yes">Show _frame</property>
+                            <property name="receives_default">False</property>
                             <property name="use_underline">True</property>
-                            <property name="response_id">0</property>
                             <property name="draw_indicator">True</property>
+                            <property name="label" translatable="yes">Show _frame</property>
                           </object>
                           <packing>
                             <property name="right_attach">2</property>
@@ -115,7 +116,7 @@
               <object class="GtkFrame" id="frame1">
                 <property name="visible">True</property>
                 <property name="label_xalign">0</property>
-                <property name="shadow_type">GTK_SHADOW_NONE</property>
+                <property name="shadow_type">none</property>
                 <child>
                   <object class="GtkAlignment" id="alignment1">
                     <property name="visible">True</property>
@@ -131,9 +132,10 @@
                               <object class="GtkCheckButton" id="checkbutton3">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
-                                <property name="label" translatable="yes">Display _seconds</property>
+                                <property name="receives_default">False</property>
                                 <property name="use_underline">True</property>
                                 <property name="draw_indicator">True</property>
+                                <property name="label" translatable="yes">Display _seconds</property>
                               </object>
                               <packing>
                                 <property name="position">0</property>
@@ -159,9 +161,10 @@
                               <object class="GtkCheckButton" id="checkbutton2">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
-                                <property name="label" translatable="yes">Display _seconds</property>
+                                <property name="receives_default">False</property>
                                 <property name="use_underline">True</property>
                                 <property name="draw_indicator">True</property>
+                                <property name="label" translatable="yes">Display _seconds</property>
                               </object>
                               <packing>
                                 <property name="position">0</property>
@@ -171,9 +174,10 @@
                               <object class="GtkCheckButton" id="checkbutton4">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
-                                <property name="label" translatable="yes">True _binary clock</property>
+                                <property name="receives_default">False</property>
                                 <property name="use_underline">True</property>
                                 <property name="draw_indicator">True</property>
+                                <property name="label" translatable="yes">True _binary clock</property>
                               </object>
                               <packing>
                                 <property name="position">1</property>
@@ -235,9 +239,10 @@
                               <object class="GtkCheckButton" id="checkbutton5">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
-                                <property name="label" translatable="yes">Display _seconds</property>
+                                <property name="receives_default">False</property>
                                 <property name="use_underline">True</property>
                                 <property name="draw_indicator">True</property>
+                                <property name="label" translatable="yes">Display _seconds</property>
                               </object>
                               <packing>
                                 <property name="position">0</property>
@@ -247,9 +252,10 @@
                               <object class="GtkCheckButton" id="checkbutton6">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
-                                <property name="label" translatable="yes">24-_hour clock</property>
+                                <property name="receives_default">False</property>
                                 <property name="use_underline">True</property>
                                 <property name="draw_indicator">True</property>
+                                <property name="label" translatable="yes">24-_hour clock</property>
                               </object>
                               <packing>
                                 <property name="position">1</property>
@@ -259,9 +265,10 @@
                               <object class="GtkCheckButton" id="checkbutton7">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
-                                <property name="label" translatable="yes">Fl_ash time seperators</property>
+                                <property name="receives_default">False</property>
                                 <property name="use_underline">True</property>
                                 <property name="draw_indicator">True</property>
+                                <property name="label" translatable="yes">Fl_ash time seperators</property>
                               </object>
                               <packing>
                                 <property name="position">2</property>
@@ -271,9 +278,10 @@
                               <object class="GtkCheckButton" id="checkbutton8">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
-                                <property name="label" translatable="yes">Sho_w AM/PM</property>
+                                <property name="receives_default">False</property>
                                 <property name="use_underline">True</property>
                                 <property name="draw_indicator">True</property>
+                                <property name="label" translatable="yes">Sho_w AM/PM</property>
                               </object>
                               <packing>
                                 <property name="position">3</property>
@@ -306,17 +314,17 @@
           </packing>
         </child>
         <child internal-child="action_area">
-          <object class="GtkHButtonBox" id="dialog-action_area1">
+          <object class="GtkHButtonBox" id="dialog-action_area2">
             <property name="visible">True</property>
-            <property name="layout_style">GTK_BUTTONBOX_END</property>
+            <property name="layout_style">end</property>
             <child>
-              <object class="GtkButton" id="button1">
+              <object class="GtkButton" id="close-button">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="label" translatable="yes">gtk-close</property>
                 <property name="use_stock">True</property>
                 <property name="response_id">0</property>
+                <property name="label" translatable="yes">gtk-close</property>
               </object>
               <packing>
                 <property name="position">0</property>
@@ -325,7 +333,7 @@
           </object>
           <packing>
             <property name="expand">False</property>
-            <property name="pack_type">GTK_PACK_END</property>
+            <property name="pack_type">end</property>
             <property name="position">0</property>
           </packing>
         </child>
