--- a/plugins/separator/separator-dialog.glade
+++ b/plugins/separator/separator-dialog.glade
@@ -1,21 +1,23 @@
 <?xml version="1.0"?>
 <interface>
-  <!--interface-requires gtk+ 2.12-->
-  <object class="GtkDialog" id="xfce-separator-dialog">
-    <property name="title" translatable="yes">Separator Preferences</property>
-    <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
-    <property name="icon_name">gtk-preferences</property>
-    <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
+  <!-- interface-requires gtk+ 2.12 -->
+  <!-- interface-requires xfce4 0.0 -->
+  <!-- interface-naming-policy toplevel-contextual -->
+  <object class="XfceTitledDialog" id="dialog">
+    <property name="title" translatable="yes">Seperator Properties</property>
+    <property name="icon_name">gtk-properties</property>
+    <property name="type_hint">normal</property>
     <property name="has_separator">False</property>
     <child internal-child="vbox">
-      <object class="GtkVBox" id="dialog-vbox1">
+      <object class="GtkVBox" id="dialog-vbox2">
         <property name="visible">True</property>
         <property name="spacing">2</property>
         <child>
           <object class="GtkFrame" id="frame1">
             <property name="visible">True</property>
+            <property name="border_width">6</property>
             <property name="label_xalign">0</property>
-            <property name="shadow_type">GTK_SHADOW_NONE</property>
+            <property name="shadow_type">none</property>
             <child>
               <object class="GtkAlignment" id="alignment1">
                 <property name="visible">True</property>
@@ -29,10 +31,11 @@
                       <object class="GtkRadioButton" id="style-empty">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="label" translatable="yes">_Empty space</property>
+                        <property name="receives_default">False</property>
                         <property name="use_underline">True</property>
                         <property name="active">True</property>
                         <property name="draw_indicator">True</property>
+                        <property name="label" translatable="yes">_Empty space</property>
                       </object>
                       <packing>
                         <property name="position">0</property>
@@ -42,11 +45,11 @@
                       <object class="GtkRadioButton" id="style-empty-expand">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="label" translatable="yes">E_xpanding empty space</property>
+                        <property name="receives_default">False</property>
                         <property name="use_underline">True</property>
-                        <property name="active">True</property>
                         <property name="draw_indicator">True</property>
                         <property name="group">style-empty</property>
+                        <property name="label" translatable="yes">E_xpanding empty space</property>
                       </object>
                       <packing>
                         <property name="position">1</property>
@@ -56,11 +59,11 @@
                       <object class="GtkRadioButton" id="style-line">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="label" translatable="yes">_Line</property>
+                        <property name="receives_default">False</property>
                         <property name="use_underline">True</property>
-                        <property name="active">True</property>
                         <property name="draw_indicator">True</property>
                         <property name="group">style-empty</property>
+                        <property name="label" translatable="yes">_Line</property>
                       </object>
                       <packing>
                         <property name="position">2</property>
@@ -70,11 +73,11 @@
                       <object class="GtkRadioButton" id="style-handle">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="label" translatable="yes">_Handle</property>
+                        <property name="receives_default">False</property>
                         <property name="use_underline">True</property>
-                        <property name="active">True</property>
                         <property name="draw_indicator">True</property>
                         <property name="group">style-empty</property>
+                        <property name="label" translatable="yes">_Handle</property>
                       </object>
                       <packing>
                         <property name="position">3</property>
@@ -84,11 +87,11 @@
                       <object class="GtkRadioButton" id="style-dots">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="label" translatable="yes">_Dots</property>
+                        <property name="receives_default">False</property>
                         <property name="use_underline">True</property>
-                        <property name="active">True</property>
                         <property name="draw_indicator">True</property>
                         <property name="group">style-empty</property>
+                        <property name="label" translatable="yes">_Dots</property>
                       </object>
                       <packing>
                         <property name="position">4</property>
@@ -112,17 +115,17 @@
           </packing>
         </child>
         <child internal-child="action_area">
-          <object class="GtkHButtonBox" id="dialog-action_area1">
+          <object class="GtkHButtonBox" id="dialog-action_area2">
             <property name="visible">True</property>
-            <property name="layout_style">GTK_BUTTONBOX_END</property>
+            <property name="layout_style">end</property>
             <child>
-              <object class="GtkButton" id="button1">
+              <object class="GtkButton" id="close-button">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="label" translatable="yes">gtk-close</property>
                 <property name="use_stock">True</property>
                 <property name="response_id">0</property>
+                <property name="label" translatable="yes">gtk-close</property>
               </object>
               <packing>
                 <property name="position">0</property>
@@ -131,7 +134,7 @@
           </object>
           <packing>
             <property name="expand">False</property>
-            <property name="pack_type">GTK_PACK_END</property>
+            <property name="pack_type">end</property>
             <property name="position">0</property>
           </packing>
         </child>
