--- a/plugins/tasklist/tasklist-dialog.glade
+++ b/plugins/tasklist/tasklist-dialog.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <interface>
-  <requires lib="gtk+" version="2.14"/>
+  <!-- interface-requires gtk+ 2.12 -->
   <!-- interface-requires xfce4 0.0 -->
   <!-- interface-naming-policy toplevel-contextual -->
   <object class="GtkListStore" id="style-model">
@@ -20,7 +20,7 @@
   <object class="XfceTitledDialog" id="dialog">
     <property name="title" translatable="yes">Tasklist Properties</property>
     <property name="icon_name">gtk-properties</property>
-    <property name="type_hint">GDK_WINDOW_TYPE_HINT_NORMAL</property>
+    <property name="type_hint">normal</property>
     <property name="has_separator">False</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox2">
@@ -35,7 +35,7 @@
               <object class="GtkFrame" id="frame3">
                 <property name="visible">True</property>
                 <property name="label_xalign">0</property>
-                <property name="shadow_type">GTK_SHADOW_NONE</property>
+                <property name="shadow_type">none</property>
                 <child>
                   <object class="GtkAlignment" id="alignment3">
                     <property name="visible">True</property>
@@ -82,9 +82,10 @@
                           <object class="GtkCheckButton" id="flat-buttons">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
-                            <property name="label" translatable="yes">Show _flat buttons</property>
+                            <property name="receives_default">False</property>
                             <property name="use_underline">True</property>
                             <property name="draw_indicator">True</property>
+                            <property name="label" translatable="yes">Show _flat buttons</property>
                           </object>
                           <packing>
                             <property name="position">1</property>
@@ -94,9 +95,10 @@
                           <object class="GtkCheckButton" id="show-handle">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
-                            <property name="label" translatable="yes">Show _handle</property>
+                            <property name="receives_default">False</property>
                             <property name="use_underline">True</property>
                             <property name="draw_indicator">True</property>
+                            <property name="label" translatable="yes">Show _handle</property>
                           </object>
                           <packing>
                             <property name="position">2</property>
@@ -123,7 +125,7 @@
               <object class="GtkFrame" id="frame1">
                 <property name="visible">True</property>
                 <property name="label_xalign">0</property>
-                <property name="shadow_type">GTK_SHADOW_NONE</property>
+                <property name="shadow_type">none</property>
                 <child>
                   <object class="GtkAlignment" id="alignment1">
                     <property name="visible">True</property>
@@ -167,9 +169,10 @@
                           <object class="GtkCheckButton" id="include-all-workspaces">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
-                            <property name="label" translatable="yes">Show windows from _all workspaces</property>
+                            <property name="receives_default">False</property>
                             <property name="use_underline">True</property>
                             <property name="draw_indicator">True</property>
+                            <property name="label" translatable="yes">Show windows from _all workspaces</property>
                           </object>
                           <packing>
                             <property name="position">1</property>
@@ -179,9 +182,10 @@
                           <object class="GtkCheckButton" id="show-only-minimized">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
-                            <property name="label" translatable="yes">Show only _minimized windows</property>
+                            <property name="receives_default">False</property>
                             <property name="use_underline">True</property>
                             <property name="draw_indicator">True</property>
+                            <property name="label" translatable="yes">Show only _minimized windows</property>
                           </object>
                           <packing>
                             <property name="position">2</property>
@@ -191,9 +195,10 @@
                           <object class="GtkCheckButton" id="switch-workspace-on-unminimize">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
-                            <property name="label" translatable="yes">Restore minimized windows to current _workspace</property>
+                            <property name="receives_default">False</property>
                             <property name="use_underline">True</property>
                             <property name="draw_indicator">True</property>
+                            <property name="label" translatable="yes">Restore minimized windows to current _workspace</property>
                           </object>
                           <packing>
                             <property name="position">3</property>
@@ -225,14 +230,15 @@
         <child internal-child="action_area">
           <object class="GtkHButtonBox" id="dialog-action_area2">
             <property name="visible">True</property>
-            <property name="layout_style">GTK_BUTTONBOX_END</property>
+            <property name="layout_style">end</property>
             <child>
               <object class="GtkButton" id="close-button">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="label" translatable="yes">gtk-close</property>
                 <property name="use_stock">True</property>
+                <property name="response_id">0</property>
+                <property name="label" translatable="yes">gtk-close</property>
               </object>
               <packing>
                 <property name="position">0</property>
@@ -241,7 +247,7 @@
           </object>
           <packing>
             <property name="expand">False</property>
-            <property name="pack_type">GTK_PACK_END</property>
+            <property name="pack_type">end</property>
             <property name="position">0</property>
           </packing>
         </child>
