--- a/plugins/launcher/launcher-dialog.glade
+++ b/plugins/launcher/launcher-dialog.glade
@@ -151,11 +151,11 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkFrame" id="frame1">
+                  <object class="GtkFrame" id="frame3">
                     <property name="visible">True</property>
                     <property name="label_xalign">0</property>
                     <child>
-                      <object class="GtkTable" id="table1">
+                      <object class="GtkTable" id="table3">
                         <property name="visible">True</property>
                         <property name="border_width">6</property>
                         <property name="n_rows">7</property>
@@ -163,12 +163,11 @@
                         <property name="column_spacing">12</property>
                         <property name="row_spacing">6</property>
                         <child>
-                          <object class="GtkLabel" id="label5">
+                          <object class="GtkLabel" id="label16">
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
                             <property name="label" translatable="yes">_Name:</property>
                             <property name="use_underline">True</property>
-                            <property name="mnemonic_widget">entry-name</property>
                           </object>
                           <packing>
                             <property name="x_options">GTK_FILL</property>
@@ -176,12 +175,11 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkLabel" id="label6">
+                          <object class="GtkLabel" id="label17">
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
                             <property name="label" translatable="yes">_Description:</property>
                             <property name="use_underline">True</property>
-                            <property name="mnemonic_widget">entry-description</property>
                           </object>
                           <packing>
                             <property name="top_attach">1</property>
@@ -191,12 +189,11 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkLabel" id="label7">
+                          <object class="GtkLabel" id="label18">
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
                             <property name="label" translatable="yes">_Icon:</property>
                             <property name="use_underline">True</property>
-                            <property name="mnemonic_widget">entry-icon</property>
                           </object>
                           <packing>
                             <property name="top_attach">2</property>
@@ -206,12 +203,11 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkLabel" id="label8">
+                          <object class="GtkLabel" id="label19">
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
                             <property name="label" translatable="yes">Co_mmand:</property>
                             <property name="use_underline">True</property>
-                            <property name="mnemonic_widget">entry-command</property>
                           </object>
                           <packing>
                             <property name="top_attach">3</property>
@@ -221,12 +217,11 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkLabel" id="label9">
+                          <object class="GtkLabel" id="label20">
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
                             <property name="label" translatable="yes">_Working Directory:</property>
                             <property name="use_underline">True</property>
-                            <property name="mnemonic_widget">entry-working-directory</property>
                           </object>
                           <packing>
                             <property name="top_attach">4</property>
@@ -236,7 +231,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkLabel" id="label10">
+                          <object class="GtkLabel" id="label21">
                             <property name="visible">True</property>
                           </object>
                           <packing>
@@ -247,7 +242,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkEntry" id="entry-name">
+                          <object class="GtkEntry" id="entry-name2">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                           </object>
@@ -258,7 +253,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkEntry" id="entry-description">
+                          <object class="GtkEntry" id="entry-description2">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                           </object>
@@ -271,7 +266,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkEntry" id="entry-command">
+                          <object class="GtkEntry" id="entry-command2">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                           </object>
@@ -284,29 +279,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkButton" id="command-select">
-                            <property name="visible">True</property>
-                            <property name="can_focus">True</property>
-                            <property name="receives_default">True</property>
-                            <child>
-                              <object class="GtkImage" id="image5">
-                                <property name="visible">True</property>
-                                <property name="stock">gtk-open</property>
-                                <property name="icon-size">1</property>
-                              </object>
-                            </child>
-                          </object>
-                          <packing>
-                            <property name="left_attach">2</property>
-                            <property name="right_attach">3</property>
-                            <property name="top_attach">3</property>
-                            <property name="bottom_attach">4</property>
-                            <property name="x_options">GTK_FILL</property>
-                            <property name="y_options">GTK_FILL</property>
-                          </packing>
-                        </child>
-                        <child>
-                          <object class="GtkFileChooserButton" id="entry-working-directory">
+                          <object class="GtkFileChooserButton" id="entry-working-directory2">
                             <property name="visible">True</property>
                             <property name="action">select-folder</property>
                             <property name="title" translatable="yes">Select A Working Directory</property>
@@ -320,7 +293,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkCheckButton" id="entry-terminal">
+                          <object class="GtkCheckButton" id="entry-terminal2">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">False</property>
@@ -337,7 +310,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkCheckButton" id="entry-startup-notify">
+                          <object class="GtkCheckButton" id="entry-startup-notify2">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">False</property>
@@ -354,19 +327,19 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkAlignment" id="alignment1">
+                          <object class="GtkAlignment" id="alignment3">
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
                             <property name="xscale">0</property>
                             <child>
-                              <object class="GtkButton" id="entry-icon">
+                              <object class="GtkButton" id="button5">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
                                 <child>
-                                  <object class="GtkImage" id="image6">
+                                  <object class="GtkImage" id="image8">
                                     <property name="visible">True</property>
-                                    <property name="stock">gtk-execute</property>
+                                    <property name="stock">gtk-missing-image</property>
                                     <property name="icon-size">5</property>
                                   </object>
                                 </child>
@@ -381,12 +354,32 @@
                             <property name="y_options">GTK_FILL</property>
                           </packing>
                         </child>
+                        <child>
+                          <object class="GtkButton" id="button6">
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">True</property>
+                            <child>
+                              <object class="GtkImage" id="image10">
+                                <property name="visible">True</property>
+                                <property name="stock">gtk-open</property>
+                                <property name="icon-size">1</property>
+                              </object>
+                            </child>
+                          </object>
+                          <packing>
+                            <property name="left_attach">2</property>
+                            <property name="right_attach">3</property>
+                            <property name="top_attach">3</property>
+                            <property name="bottom_attach">4</property>
+                          </packing>
+                        </child>
                       </object>
                     </child>
                   </object>
                   <packing>
                     <property name="resize">True</property>
-                    <property name="shrink">False</property>
+                    <property name="shrink">True</property>
                   </packing>
                 </child>
               </object>
